--- a/DM553/Reducerbarhed.tex
+++ b/DM553/Reducerbarhed.tex
@@ -280,7 +280,7 @@ Lad $K$ være et sprog du ønsker at vise til at være uafgørligt.
 
 \end{proof}
 
-\subsection{Praktiske Noter}%
+\subsection{Konsekvenser i praktik}%
 \label{subsec:uafgørlighedpraktik}
 
 De her noter kommer fra ChatGPT, hvor jeg har spurgt hvordan disse problemer har en effekt på softwareudvikling, og generelt praktisk arbejde. Jeg har selvfølgelig omskrevet noterne til mit eget sprog. Jeg har kun to eksempler her, standseproblemet (Halting problemet) og tomhedsproblemet:
