--- a/DM553/Tidskompleksitet.tex
+++ b/DM553/Tidskompleksitet.tex
@@ -91,6 +91,8 @@ Alle ``reasonable'' (ifølge Sipser) deterministiske modeller er polynomielt rel
 	\end{equation*}
 \end{definition}
 
+Det vil altså sige at klassen $P$ er alle problemer der har tidskompleksitet $n^{k}$ \textbf{eller under}.
+
 $P$ er en vigtig klasse fordi det er en invariant af alle modeller for komputering som er polynomielt ækvivalente til en deterministisk enkeltbånds Turingmaskine, og $P$ svarer nogenlunde til klassen af problemer som man realistisk kan løse på en computer.
 
 Bemærk at vi her kun er interesseret i beslutningsproblemer, altså om hvorvidt strengen $w$ er en del af et sprog.
