--- a/DM553/Afgørlighed.tex
+++ b/DM553/Afgørlighed.tex
@@ -58,7 +58,7 @@ Vi vil nu gerne vise det samme, men med en NFA fremfor en DFA.
 			\tikzset{block/.style={rectangle, draw, minimum height=2em, minimum width=3em}}
 			\tikzset{line/.style={draw, -latex'}}
 
-			\node[block, minimum height=1.5cm, fill=SchemeBlue!50, draw=SchemeBlue] (E) at (0, 0){$A$};
+			\node[block, minimum height=1.5cm, fill=DeepSeaBlue!50, draw=DeepSeaBlue] (E) at (0, 0){$A$};
 			\node[fill=none, draw=none] (end) at (2,0) {};
 			\node[fill=none, draw=none] (start) at (-2,0) {};
 
@@ -92,9 +92,9 @@ Vi vil nu gerne vise det samme, men med en NFA fremfor en DFA.
 
 
 			%% M_2
-			\node[fill=SchemeRed!20, draw=SchemeRed, minimum height=5cm, minimum width=4cm] (m2) at (1.3,-1) {};
+			\node[fill=CoralRed!20, draw=CoralRed, minimum height=5cm, minimum width=4cm] (m2) at (1.3,-1) {};
 			%% A
-			\node[block, minimum height=1.5cm, fill=SchemeBlue!50, draw=SchemeBlue] (E) at (0, 0){$A$};
+			\node[block, minimum height=1.5cm, fill=DeepSeaBlue!50, draw=DeepSeaBlue] (E) at (0, 0){$A$};
 			\node[fill=none, draw=none] (start) at (-2,0) {};
 
 			\node[fill=none, draw=none] (b) at (-1.3, 0.2) {\texttt{<B>}};
@@ -105,7 +105,7 @@ Vi vil nu gerne vise det samme, men med en NFA fremfor en DFA.
 			\draw[->] (E.east) -- (1.9, 0);
 
 			%% M_1
-			\node[block, minimum height=3cm, fill=SchemeGreen!50, draw=SchemeGreen] (m1) at (2.5,-1) {$M_{1}$};
+			\node[block, minimum height=3cm, fill=TurquoiseGreen!50, draw=TurquoiseGreen] (m1) at (2.5,-1) {$M_{1}$};
 
 			%% W
 			\node[fill=none, draw=none] (wstart) at (-2,-2) {};
@@ -121,7 +121,7 @@ Vi vil nu gerne vise det samme, men med en NFA fremfor en DFA.
 			\draw[->] (3.09, -2)  -- (3.9, -2);
 			\node[fill=none, draw=none] (afvis) at (4.5, -2) {Afvis};
 
-			\node[fill=none, draw=none, text=SchemeRed] (m2) at (1.5, -4) {$M_{2}$};
+			\node[fill=none, draw=none, text=CoralRed] (m2) at (1.5, -4) {$M_{2}$};
 		\end{tikzpicture}
 	\end{center}
 
@@ -157,9 +157,9 @@ Vi vil gerne vise det samme for regulære udtryk:
 
 
 			%% M_2
-			\node[fill=SchemeSteel!20, draw=SchemeSteel, minimum height=5cm, minimum width=4cm] (m2) at (1.3,-1) {};
+			\node[fill=Steel!20, draw=Steel, minimum height=5cm, minimum width=4cm] (m2) at (1.3,-1) {};
 			%% A
-			\node[block, minimum height=1.5cm, fill=SchemeBlue!50, draw=SchemeBlue] (E) at (0, 0){$B$};
+			\node[block, minimum height=1.5cm, fill=DeepSeaBlue!50, draw=DeepSeaBlue] (E) at (0, 0){$B$};
 			\node[fill=none, draw=none] (start) at (-2,0) {};
 
 			\node[fill=none, draw=none] (b) at (-1.3, 0.2) {\texttt{<R>}};
@@ -170,7 +170,7 @@ Vi vil gerne vise det samme for regulære udtryk:
 			\draw[->] (E.east) -- (1.9, 0);
 
 			%% M_1
-			\node[block, minimum height=3cm, fill=SchemeRed!50, draw=SchemeRed] (m1) at (2.5,-1) {$M_{2}$};
+			\node[block, minimum height=3cm, fill=CoralRed!50, draw=CoralRed] (m1) at (2.5,-1) {$M_{2}$};
 
 			%% W
 			\node[fill=none, draw=none] (wstart) at (-2,-2) {};
@@ -186,7 +186,7 @@ Vi vil gerne vise det samme for regulære udtryk:
 			\draw[->] (3.09, -2)  -- (3.9, -2);
 			\node[fill=none, draw=none] (afvis) at (4.5, -2) {Afvis};
 
-			\node[fill=none, draw=none, text=SchemeSteel] (m2) at (1.5, -4) {$M_{3}$};
+			\node[fill=none, draw=none, text=Steel] (m2) at (1.5, -4) {$M_{3}$};
 		\end{tikzpicture}
 	\end{center}
 \end{proof}
@@ -235,10 +235,10 @@ Vi går nu videre til ækvivalens mellem to DFA'er:
 
 
 			%% M_2
-			\node[fill=SchemeGreen!20, draw=SchemeGreen, minimum height=5cm, minimum width=4cm] (m2) at (1.3,-1) {};
+			\node[fill=TurquoiseGreen!20, draw=TurquoiseGreen, minimum height=5cm, minimum width=4cm] (m2) at (1.3,-1) {};
 
 			%% A
-			\node[block, minimum height=1.5cm, fill=SchemeSteel!50, draw=SchemeSteel] (E) at (0, -1){$C$};
+			\node[block, minimum height=1.5cm, fill=Steel!50, draw=Steel] (E) at (0, -1){$C$};
 			\node[fill=none, draw=none] (start) at (-2,-0.5) {};
 
 			\node[fill=none, draw=none] (b) at (-1.3, -0.2) {\texttt{<A>}};
@@ -249,7 +249,7 @@ Vi går nu videre til ækvivalens mellem to DFA'er:
 			\draw[->] (0.6, -1.0) -- (1.9, -1.0);
 
 			%% M_1
-			\node[block, minimum height=3cm, fill=SchemeSteel!50, draw=SchemeSteel] (m1) at (2.5,-1) {$M_{4}$};
+			\node[block, minimum height=3cm, fill=Steel!50, draw=Steel] (m1) at (2.5,-1) {$M_{4}$};
 
 			%% W
 			\node[fill=none, draw=none] (wstart) at (-2,-1.3) {};
@@ -265,7 +265,7 @@ Vi går nu videre til ækvivalens mellem to DFA'er:
 			\draw[->] (3.09, -2)  -- (3.9, -2);
 			\node[fill=none, draw=none] (afvis) at (4.5, -2) {Afvis};
 
-			\node[fill=none, draw=none, text=SchemeSteel] (m2) at (1.5, -4) {$M_{5}$};
+			\node[fill=none, draw=none, text=Steel] (m2) at (1.5, -4) {$M_{5}$};
 		\end{tikzpicture}
 	\end{center}
 	$M_{5}$ afgører $EQ_{DFA}$.
@@ -335,19 +335,19 @@ Vi går nu videre til at tjekke om en kontekstfri grammatik genkender det tomme 
 	\scalebox{0.6}{ % Scale down to 70% of original size
 		\begin{tikzpicture}
 			% Outermost ellipse (gray, recognizable)
-			\draw[SchemeSteel!50,fill=SchemeSteel!50,dashed, thick, opacity=0.2] (0.5,0) ellipse (10cm and 5cm);
+			\draw[Steel!50,fill=Steel!50,dashed, thick, opacity=0.2] (0.5,0) ellipse (10cm and 5cm);
 			\draw node at (0.5,-4.5) {Genkendelige Sprog};  % Text below the ellipse
 
 			% Second ellipse (red, decidable) - slightly smaller
-			\draw[SchemeRed!60,fill=SchemeRed!60,dashed, thick] (0.5,0) ellipse (8cm and 4.0cm);
+			\draw[CoralRed!60,fill=CoralRed!60,dashed, thick] (0.5,0) ellipse (8cm and 4.0cm);
 			\draw node[below, yshift=-3.0cm] at (0.5,0) {Afgørlige $ \{a^nb^nc^n \mid n \ge 0\}$};
 
 			% Third ellipse (blue, context-free) - even smaller
-			\draw[SchemeBlue!70,fill=SchemeBlue!70,dashed, thick] (0.5,0) ellipse (6cm and 3.0cm);
+			\draw[DeepSeaBlue!70,fill=DeepSeaBlue!70,dashed, thick] (0.5,0) ellipse (6cm and 3.0cm);
 			\draw node[above, yshift=-2.6cm] at (0.5,0) {Kontekst-fri $\{a^nb^n \mid n \ge 0\}$};
 
 			% Innermost ellipse (gray, regular) - smallest
-			\draw[SchemeLight!90,fill=SchemeLight!90,dashed, thick, opacity=0.3] (0.5,0) ellipse (4cm and 2.0cm);
+			\draw[Light!90,fill=Light!90,dashed, thick, opacity=0.3] (0.5,0) ellipse (4cm and 2.0cm);
 			\draw node at (0.5,0) {Regulær $\{a^ib^j \mid i, j \ge 0\}$};
 		\end{tikzpicture}
 	}
@@ -454,6 +454,8 @@ Fra vores tidligere beskrivelse af Ko-Turing genkendelighed, betyder det altså 
 		\item Ingen af $L$, $\overline{L}$ er genkendelige
 		\item L er genkendelig, men $\overline{L}$ er ikke genkendelig, eller $\overline{L}$ er genkendelig, men $L$ er ikke genkendelig.
 	\end{enumerate}
+	Se Tabel~\ref{table:afgørliggenkendelig} for en oversigt, hvor $D = $ afgørlig (decidable), $R$ = genkendelig (recognizable) men ikke afgørlig, $NR$ = ikke genkendelig (not recognizable), $*$ = muligt, $-$ = umuligt.
+\end{theorem}
 	\begin{table}[ht]
 		\centering
 		\begin{tabular}{|l|l|l|l|}
@@ -463,9 +465,8 @@ Fra vores tidligere beskrivelse af Ko-Turing genkendelighed, betyder det altså 
 			R                  & - & - & *  \\ \hline
 			NR                 & - & * & *  \\ \hline
 		\end{tabular}
+		\label{table:afgørliggenkendelig}
 	\end{table}
-	Hvor $D = $ afgørlig (decidable), $R$ = genkendelig (recognizable) men ikke afgørlig, $NR$ = ikke genkendelig (not recognizable), $*$ = muligt, $-$ = umuligt.
-\end{theorem}
 
 \begin{corollary}
 	$\overline{A_{TM}}$ er ikke genkendeligt.
