--- a/DM553/KontekstFrieSprog.tex
+++ b/DM553/KontekstFrieSprog.tex
@@ -20,9 +20,9 @@ En grammatik består af en samling af \textbf{substitueringsregler}, også kalde
 \begin{equation}
 	\tag{$G_{1}$}
 	\begin{split}
-		A &\rightarrow \mathtt{0}A \mathtt{1}\\
-		A &\rightarrow B\\
-		B &\rightarrow \mathtt{\#}
+		A & \rightarrow \mathtt{0}A \mathtt{1} \\
+		A & \rightarrow B                      \\
+		B & \rightarrow \mathtt{\#}
 	\end{split}
 	\label{eqn:G1}
 \end{equation}
@@ -176,15 +176,15 @@ Chomsky Normal Form er en form af en kontekstfri grammatik. Bemærk at den også
 	En kontekstfri grammatik er i \textbf{\textit{Chomsky Normal Form}} hvis hver regel har formen
 	\begin{equation*}
 		\begin{split}
-			A &\rightarrow BC\\
-			A &\rightarrow a
+			A & \rightarrow BC \\
+			A & \rightarrow a
 		\end{split}
 	\end{equation*}
 	hvor $a$ er enhver terminal, og $A, B$ og $C$ er enhver variabel, dog må $B$ og $C$ ikke være startvariablen. Derudover tillader vi reglen $S \rightarrow \varepsilon$, hvor $S$ er startvariablen.
 \end{definition}
 
 \begin{theorem}
-  \label{teo:cnf}
+	\label{teo:cnf}
 	Ethvert kontekstfri sprog er genereret af en kontekstfri grammatik i Chomsky Normal Form.
 \end{theorem}
 
@@ -192,16 +192,16 @@ Vi vil vise at vi kan konvertere enhver grammatik til chomsky normal form. Vi vi
 
 \begin{proof}
 	\noindent
-	\textbf{\large Skridt 1:} Først tilføjer vi en ny variabel $S_{0}$ og reglen $S_{0} \rightarrow S$, hvor $S$ er det originale startvariabel.
+	\textbf{Skridt 1:} Først tilføjer vi en ny variabel $S_{0}$ og reglen $S_{0} \rightarrow S$, hvor $S$ er det originale startvariabel.
 
 	\noindent
-	\textbf{\large Skridt 2:} Efter dette fjerner vi alle regler af formen $A \rightarrow \varepsilon$, hvor $A \neq S$. Når dette er gjort fjerne vi alle regler hvor $A$ er på højresiden af en regel, og tilføjer en ny regel med $A$ fjernet. Eksempelvis bliver $R \rightarrow uAv$ til $R \rightarrow uv$ og $R \rightarrow uAvAw$ bliver til tre regler $R \rightarrow uvAw, R \rightarrow uAvw, R \rightarrow uvw$. Hvis vi har reglen $R \rightarrow \varepsilon$ tilføjer vi $R \rightarrow \varepsilon$, \textbf{undtagen hvis vi allerede har fjernet denne regel.} Vi forstætter dette indtil alle $\varepsilon$-regler er væk (undtagen startvariablen.)
+	\textbf{Skridt 2:} Efter dette fjerner vi alle regler af formen $A \rightarrow \varepsilon$, hvor $A \neq S$. Når dette er gjort fjerne vi alle regler hvor $A$ er på højresiden af en regel, og tilføjer en ny regel med $A$ fjernet. Eksempelvis bliver $R \rightarrow uAv$ til $R \rightarrow uv$ og $R \rightarrow uAvAw$ bliver til tre regler $R \rightarrow uvAw, R \rightarrow uAvw, R \rightarrow uvw$. Hvis vi har reglen $R \rightarrow \varepsilon$ tilføjer vi $R \rightarrow \varepsilon$, \textbf{undtagen hvis vi allerede har fjernet denne regel.} Vi forstætter dette indtil alle $\varepsilon$-regler er væk (undtagen startvariablen.)
 
 	\noindent
-	\textbf{\large Skridt 3:} Efter vi har gjort dette tager vi os af \textit{unit rules}. Vi fjerner en unit rule $A \rightarrow B$. Så, når $B \rightarrow u$ forekommer, tilføjer vi $A \rightarrow u$ (bemærk at vi ikke fjerner $B \rightarrow u$, da den kan komme et andet sted fra.) Vi bliver ved indtil vi har fjernet alle unit rules.
+	\textbf{Skridt 3:} Efter vi har gjort dette tager vi os af \textit{unit rules}. Vi fjerner en unit rule $A \rightarrow B$. Så, når $B \rightarrow u$ forekommer, tilføjer vi $A \rightarrow u$ (bemærk at vi ikke fjerner $B \rightarrow u$, da den kan komme et andet sted fra.) Vi bliver ved indtil vi har fjernet alle unit rules.
 
 	\noindent
-	\textbf{\large Skridt 4:} Til sidst konverterer vi resten af reglerne til den rigtige form. Vi erstatter hver regel $A \rightarrow u_{1}u_{2} \cdots u_{k}$ hvor $k \geq 3$ og hvert $u_{i}$ er en variabel eller terminalt symbol, med reglerne $A \rightarrow u_{1}A_{1}, A_{1} \rightarrow u_{2}A_{2}, A_{2} \rightarrow u_{3}A_{3}, \ldots, $ og $A_{k-2} \rightarrow u_{k-1}u_{k}$.  $A_{i}$'erne er nye variabler. Vi erstatter en hver terminal $u_{i}$ i de tidligere regler men den nye variabel $U_{i}$ og tilføjer reglen $U_{i} \rightarrow u_{i}$.
+	\textbf{Skridt 4:} Til sidst konverterer vi resten af reglerne til den rigtige form. Vi erstatter hver regel $A \rightarrow u_{1}u_{2} \cdots u_{k}$ hvor $k \geq 3$ og hvert $u_{i}$ er en variabel eller terminalt symbol, med reglerne $A \rightarrow u_{1}A_{1}, A_{1} \rightarrow u_{2}A_{2}, A_{2} \rightarrow u_{3}A_{3}, \ldots, $ og $A_{k-2} \rightarrow u_{k-1}u_{k}$.  $A_{i}$'erne er nye variabler. Vi erstatter en hver terminal $u_{i}$ i de tidligere regler men den nye variabel $U_{i}$ og tilføjer reglen $U_{i} \rightarrow u_{i}$.
 \end{proof}
 
 Dette kan godt være svært at forstå, og derfor kigger vi på et eksempel.
@@ -211,9 +211,9 @@ Dette kan godt være svært at forstå, og derfor kigger vi på et eksempel.
 
 	\begin{equation*}
 		\begin{split}
-			S &\rightarrow ASA\;|\;aB \\
-			A &\rightarrow B\;|\;S \\
-			B &\rightarrow b\;|\; \varepsilon
+			S & \rightarrow ASA\;|\;aB         \\
+			A & \rightarrow B\;|\;S            \\
+			B & \rightarrow b\;|\; \varepsilon
 		\end{split}
 	\end{equation*}
 
@@ -224,10 +224,10 @@ Dette kan godt være svært at forstå, og derfor kigger vi på et eksempel.
 
 	\begin{equation*}
 		\begin{split}
-			S_{0} &\rightarrow S\\
-			S &\rightarrow ASA \;|\; aB\\
-			A &\rightarrow B \;|\; S\\
-			B &\rightarrow b \;|\; \varepsilon
+			S_{0} & \rightarrow S                   \\
+			S     & \rightarrow ASA \;|\; aB        \\
+			A     & \rightarrow B \;|\; S           \\
+			B     & \rightarrow b \;|\; \varepsilon
 		\end{split}
 	\end{equation*}
 
@@ -237,10 +237,10 @@ Dette kan godt være svært at forstå, og derfor kigger vi på et eksempel.
 	Vi fjerner $\varepsilon-$reglerne.
 	\begin{equation*}
 		\begin{split}
-			S_{0} &\rightarrow S\\
-			S &\rightarrow ASA \;|\; aB \;|\; a\;\;\;\;\; \text{\color{gray}da B kan blive }\varepsilon\\
-			A &\rightarrow B \;|\; S \; | \; \varepsilon\\
-			B &\rightarrow b
+			S_{0} & \rightarrow S                                                                            \\
+			S     & \rightarrow ASA \;|\; aB \;|\; a\;\;\;\;\; \text{\color{gray}da B kan blive }\varepsilon \\
+			A     & \rightarrow B \;|\; S \; | \; \varepsilon                                                \\
+			B     & \rightarrow b
 		\end{split}
 	\end{equation*}
 
@@ -250,10 +250,10 @@ Dette kan godt være svært at forstå, og derfor kigger vi på et eksempel.
 
 	\begin{equation*}
 		\begin{split}
-			S_{0} &\rightarrow S\\
-			S &\rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \;| \;S\\
-			A &\rightarrow B \;|\; S \\
-			B &\rightarrow b
+			S_{0} & \rightarrow S                                              \\
+			S     & \rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \;| \;S \\
+			A     & \rightarrow B \;|\; S                                      \\
+			B     & \rightarrow b
 		\end{split}
 	\end{equation*}
 
@@ -263,10 +263,10 @@ Dette kan godt være svært at forstå, og derfor kigger vi på et eksempel.
 	Vi fjerner nu unit-reglen $S \rightarrow S$:
 	\begin{equation*}
 		\begin{split}
-			S_{0} &\rightarrow S\\
-			S &\rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \\
-			A &\rightarrow B \;|\; S \\
-			B &\rightarrow b
+			S_{0} & \rightarrow S                                      \\
+			S     & \rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \\
+			A     & \rightarrow B \;|\; S                              \\
+			B     & \rightarrow b
 		\end{split}
 	\end{equation*}
 	Og nu $S_{0} \rightarrow S$:
@@ -274,27 +274,27 @@ Dette kan godt være svært at forstå, og derfor kigger vi på et eksempel.
 
 	\begin{equation*}
 		\begin{split}
-			S_{0} &\rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \\
-			A &\rightarrow B \;|\; S \\
-			B &\rightarrow b
+			S_{0} & \rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \\
+			A     & \rightarrow B \;|\; S                              \\
+			B     & \rightarrow b
 		\end{split}
 	\end{equation*}
 
 	Nu fjerner vi reglen $A \rightarrow B$:
 	\begin{equation*}
 		\begin{split}
-			S_{0} &\rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \\
-			A &\rightarrow  S  \;|\; b\\
-			B &\rightarrow b
+			S_{0} & \rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \\
+			A     & \rightarrow  S  \;|\; b                            \\
+			B     & \rightarrow b
 		\end{split}
 	\end{equation*}
 
 	Til sidst fjerner vi reglen $A \rightarrow S$:
 	\begin{equation*}
 		\begin{split}
-			S_{0} &\rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS \\
-			A &\rightarrow  b  \;|\; ASA \;|\; aB \;|\; a \;|\; SA \;|\; AS \\
-			B &\rightarrow b
+			S_{0} & \rightarrow ASA \;|\; aB \;|\; a \;| \;SA \;| \;AS           \\
+			A     & \rightarrow  b  \;|\; ASA \;|\; aB \;|\; a \;|\; SA \;|\; AS \\
+			B     & \rightarrow b
 		\end{split}
 	\end{equation*}
 
@@ -306,12 +306,12 @@ Dette kan godt være svært at forstå, og derfor kigger vi på et eksempel.
 
 	\begin{equation*}
 		\begin{split}
-			S_{0} &\rightarrow AA_{1} \;|\; UB \;|\;a \;|\;SA \;|\; AS  \\
-			S &\rightarrow AA_{1} \;|\; UB \;|\;a \;|\;SA \;|\; AS  \\
-			A &\rightarrow  b  \;|\; AA_{1} \;|\; a \;|\; SA \;|\; AS \\
-			A_{1} &\rightarrow SA \\
-			U &\rightarrow a\\
-			B &\rightarrow b
+			S_{0} & \rightarrow AA_{1} \;|\; UB \;|\;a \;|\;SA \;|\; AS    \\
+			S     & \rightarrow AA_{1} \;|\; UB \;|\;a \;|\;SA \;|\; AS    \\
+			A     & \rightarrow  b  \;|\; AA_{1} \;|\; a \;|\; SA \;|\; AS \\
+			A_{1} & \rightarrow SA                                         \\
+			U     & \rightarrow a                                          \\
+			B     & \rightarrow b
 		\end{split}
 	\end{equation*}
 
@@ -407,49 +407,48 @@ En PDA $M = (Q, \Sigma, \Gamma, \delta, q_{0}, F)$ komputerer som følger. Den a
 		\item $\Sigma = \{0,1\}$
 		\item $\Gamma = \{0, \$\}$
 		\item $F = \{q_{1}, q_{4}\}$
-		\item $\delta$ gives af følgende tabel, hvor tomme felter er $\emptyset$:
-		      \begin{center}
-			      % Please add the following required packages to your document preamble:
-			      % \usepackage{multirow}
-			      \begin{table}[ht]
-				      \begin{tabular}{l|lllllllll}
-					      \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Input \\ Stak:\end{tabular}} & \multicolumn{3}{l|}{0} & \multicolumn{3}{l|}{1}  & \multicolumn{3}{l|}{$\varepsilon$}                                                                                                                                                                                    \\ \cline{2-10}
-					                                                                              & \multicolumn{1}{l|}{0} & \multicolumn{1}{l|}{\$} & \multicolumn{1}{l|}{$\varepsilon$} & \multicolumn{1}{l|}{0}   & \multicolumn{1}{l|}{\$} & \multicolumn{1}{l|}{$\varepsilon$} & \multicolumn{1}{l|}{0} & \multicolumn{1}{l|}{\$}  & \multicolumn{1}{l|}{$\varepsilon$} \\ \hline
-					      $q_1$                                                                   &                        &                         &                                    &                          &                         &                                    &                        &                          & $\{(q_2, \$)\}$                    \\ \cline{1-1}
-					      $q_2$                                                                   &                        &                         & $\{(q_2, 0)\}$                     & $\{(q_3, \varepsilon)\}$ &                         &                                    &                        &                          &                                    \\ \cline{1-1}
-					      $q_3$                                                                   &                        &                         &                                    & $\{(q_3, \varepsilon)\}$ &                         &                                    &                        & $\{(q_4, \varepsilon)\}$ &                                    \\ \cline{1-1}
-					      $q_4$                                                                   &                        &                         &                                    &                          &                         &                                    &                        &                          &                                    \\ \cline{1-1}
-				      \end{tabular}
-			      \end{table}
-		      \end{center}
+		\item $\delta$ gives af følgende Tabel~\ref{table:0n1npda}, hvor tomme felter er $\emptyset$.
 	\end{enumerate}
 	Altså betyder det at når den er i state 1, og den ser en tom stak, så pusher den \$ som symboliserer enden på strengen skal være nået. Når den er ved state 2, stakken er tom (den tomme streng), og den ser et 0, så skal den forblive ved state 2, og pushe et 0. Dette bliver den ved med for alle 0'er muligt. Hvis den måder et 1 tal når der er et 0 på stakken imens den er i state 2, skifter den til state 3, og popper fra stakken. Sidst, når den er i state 3 og strengen er færdiglæst, og der kun er et \$ tilbage på stakken, så er strengen accepteret.
 
 
-	\begin{figure}[ht]
-		\index{State Diagram!Pushdown Automat}
-		\centering
-		\begin{tikzpicture}[>=Stealth,shorten >=1pt,node distance=2.8cm,on grid,auto]
-			\node[state, accepting, initial] (q1) {$q_1$};
-			\node[state, right=of q1] (q2) {$q_2$};
-			\node[state, below=of q2] (q3) {$q_3$};
-			\node[state, accepting, left=of q3] (q4) {$q_4$};
-
-			\path[->]
-			(q1) edge node {$\varepsilon, \varepsilon \rightarrow \$$} (q2)
-			(q2) edge[loop right] node {$0, \varepsilon \rightarrow 0$} (q2)
-			(q2) edge node {$1, 0 \rightarrow \varepsilon$} (q3)
-			(q3) edge[loop right] node {$1, 0 \rightarrow \varepsilon$} (q3)
-			(q3) edge node { $\varepsilon, \$ \rightarrow \varepsilon$ } (q4);
-		\end{tikzpicture}
-		\caption{\label{fig:sipser2.15} State diagram af PDA'en $M_1, L(M_1) = \{0^n 1^n  | n \ge 0 \}$}
-	\end{figure}
 
 
 	Vi kan også illustrere denne PDA i form af et state diagram, ligesom ved endelige automater. Se Figur~\ref{fig:sipser2.15}. Her betyder notationen $a, b \rightarrow c$ at når den ser et $a$ erstatter den $b$ på toppen af stakken med et $c$.
 
 \end{example}
-%% TODO: Nået til side  114
+		      \begin{table}[ht]
+				\label{table:0n1npda}
+			      \centering
+			      \begin{tabular}{l|lllllllll}
+				      \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Input \\ Stak:\end{tabular}} & \multicolumn{3}{l|}{0} & \multicolumn{3}{l|}{1}  & \multicolumn{3}{l|}{$\varepsilon$}                                                                                                                                                                                    \\ \cline{2-10}
+				                                                                              & \multicolumn{1}{l|}{0} & \multicolumn{1}{l|}{\$} & \multicolumn{1}{l|}{$\varepsilon$} & \multicolumn{1}{l|}{0}   & \multicolumn{1}{l|}{\$} & \multicolumn{1}{l|}{$\varepsilon$} & \multicolumn{1}{l|}{0} & \multicolumn{1}{l|}{\$}  & \multicolumn{1}{l|}{$\varepsilon$} \\ \hline
+				      $q_1$                                                                   &                        &                         &                                    &                          &                         &                                    &                        &                          & $\{(q_2, \$)\}$                    \\ \cline{1-1}
+				      $q_2$                                                                   &                        &                         & $\{(q_2, 0)\}$                     & $\{(q_3, \varepsilon)\}$ &                         &                                    &                        &                          &                                    \\ \cline{1-1}
+				      $q_3$                                                                   &                        &                         &                                    & $\{(q_3, \varepsilon)\}$ &                         &                                    &                        & $\{(q_4, \varepsilon)\}$ &                                    \\ \cline{1-1}
+				      $q_4$                                                                   &                        &                         &                                    &                          &                         &                                    &                        &                          &                                    \\ \cline{1-1}
+			      \end{tabular}
+		      \end{table}
+
+\begin{figure}[ht]
+	\index{State Diagram!Pushdown Automat}
+	\centering
+	\begin{tikzpicture}[>=Stealth,shorten >=1pt,node distance=2.8cm,on grid,auto]
+		\node[state, accepting, initial] (q1) {$q_1$};
+		\node[state, right=of q1] (q2) {$q_2$};
+		\node[state, below=of q2] (q3) {$q_3$};
+		\node[state, accepting, left=of q3] (q4) {$q_4$};
+
+		\path[->]
+		(q1) edge node {$\varepsilon, \varepsilon \rightarrow \$$} (q2)
+		(q2) edge[loop right] node {$0, \varepsilon \rightarrow 0$} (q2)
+		(q2) edge node {$1, 0 \rightarrow \varepsilon$} (q3)
+		(q3) edge[loop right] node {$1, 0 \rightarrow \varepsilon$} (q3)
+		(q3) edge node { $\varepsilon, \$ \rightarrow \varepsilon$ } (q4);
+	\end{tikzpicture}
+	\caption{\label{fig:sipser2.15} State diagram af PDA'en $M_1, L(M_1) = \{0^n 1^n  | n \ge 0 \}$}
+\end{figure}
+
 
 
 \subsection{Konvertering af CFG til PDA}%
@@ -512,18 +511,17 @@ Vi vil nu komme med det formelle bevis på dette.
 
 	\begin{equation*}
 		\begin{split}
-			\delta (q,a,s) &\text{ indeholder } (q_{1}, u_{l}), \\
-			\delta (q_{1}, \varepsilon, \varepsilon) &= \{(q_{2}, u_{l-1})\}, \\
-			\delta (q_{2}, \varepsilon, \varepsilon) &= \{(q_{3}, u_{l-2})\}, \\
-			&\vdots \\
-			\delta (q_{l-1}, \varepsilon, \varepsilon) &= \{(r, u_{1})\}.\\
+			\delta (q,a,s)                             & \text{ indeholder } (q_{1}, u_{l}), \\
+			\delta (q_{1}, \varepsilon, \varepsilon)   & = \{(q_{2}, u_{l-1})\},             \\
+			\delta (q_{2}, \varepsilon, \varepsilon)   & = \{(q_{3}, u_{l-2})\},             \\
+			                                           & \vdots                              \\
+			\delta (q_{l-1}, \varepsilon, \varepsilon) & = \{(r, u_{1})\}.                   \\
 		\end{split}
 	\end{equation*}
 
 	Følgende billede klargører hvordan dette fungerer:
 
 	\begin{center}
-
 		\begin{tikzpicture}[shorten >=1pt, node distance=2.8cm, on grid, auto]
 			\node[state] (q1) {$q$};
 			\node[state, below=of q1] (q2) {$r$};
@@ -676,63 +674,64 @@ Ligesom der findes non-regulære sprog findes der også non-kontekstfrie sprog. 
 
 	Antag at $|w| \ge p$ og kig på et parsetræ, $T$, fra en udledning af $w$ i  $G$.\footnote{Jeg undlader at lave parsetræet her, da det sagtens kan forstås uden grafik.} Vi ved at hvert blad i parsetræet korresponderer til en terminal, og dermed må der være $\ge 2^{|V| +1}$ blade i parsetræet. Da du kun kan fordoble antallet af elementerne, må højden af træet ($h(T)$) være \textbf{mindst} $|V| + 2$. Dette betyder at der må være mindst 2 variabler der er gentagne.
 
-	\begin{figure}[ht]
-		\centering
-		\begin{tikzpicture}[>=latex]
-			% Nodes
-			\node (u1) at (0,0) {};
-			\node (u) at (0.5,-0.5) {$u$};
-			\node (u2) at (1,0) {};
-			\node (v1) at (2,0) {};
-			\node (v) at (2.5,-0.5) {$v$};
-			\node (v2) at (3,0) {};
-			\node (x1) at (4,0) {};
-			\node (x) at (4.5,-0.5) {$x$};
-			\node (x2) at (5,0) {};
-			\node (y1) at (6,0) {};
-			\node (y) at (6.5,-0.5) {$y$};
-			\node (y2) at (7,0) {};
-			\node (z1) at (8,0) {};
-			\node (z) at (8.5,-0.5) {$z$};
-			\node (z2) at (9,0) {};
-
-			% Upper nodes
-			\node (B2) at (4.5,3) {$B$};
-			\node (B1) at (4.5,4) {$B$};
-			\node (S) at (4.5,5) {$S$};
-
-			% Lines going down
-			\draw[-] (B1) to (B2);
-			\draw[-] (S) to (B1);
-
-
-			% Lines going to terminals
-			\draw[-] (B2) to[bend right] (x1);
-			\draw[-] (B2) to[bend left] (x2);
-			\draw[-] (x1) to (x2);
-
-			\draw[-] (B1) to[bend right] (v1);
-			\draw[-] (B2) to[bend right] (v2);
-			\draw[-] (v1) to (v2);
-
-			\draw[-] (B1) to[bend left] (y2);
-			\draw[-] (B2) to[bend left] (y1);
-			\draw[-] (y1) to (y2);
-
-			\draw[-] (B1) to[bend right] (u2);
-			\draw[-] (S) to[bend right] (u1);
-			\draw[-] (u1) to (u2);
-
-			\draw[-] (B1) to[bend left] (z1);
-			\draw[-] (S) to[bend left] (z2);
-			\draw[-] (z1) to (z2);
-
-		\end{tikzpicture}
-		\caption{\label{fig:pumpelemmacfg} Gentagelse i parsetræ for CFG}
-	\end{figure}
 
 	I Figur~\ref{fig:pumpelemmacfg} kan man se hvordan gentagelsen i parsetræet fungerer. Dette betyder naturligvis derfor også at \textbf{både} $v$ og $y$ kan gentages 0 eller flere gange.
 \end{proof}
+
+\begin{figure}[ht]
+	\centering
+	\begin{tikzpicture}[>=latex]
+		% Nodes
+		\node (u1) at (0,0) {};
+		\node (u) at (0.5,-0.5) {$u$};
+		\node (u2) at (1,0) {};
+		\node (v1) at (2,0) {};
+		\node (v) at (2.5,-0.5) {$v$};
+		\node (v2) at (3,0) {};
+		\node (x1) at (4,0) {};
+		\node (x) at (4.5,-0.5) {$x$};
+		\node (x2) at (5,0) {};
+		\node (y1) at (6,0) {};
+		\node (y) at (6.5,-0.5) {$y$};
+		\node (y2) at (7,0) {};
+		\node (z1) at (8,0) {};
+		\node (z) at (8.5,-0.5) {$z$};
+		\node (z2) at (9,0) {};
+
+		% Upper nodes
+		\node (B2) at (4.5,3) {$B$};
+		\node (B1) at (4.5,4) {$B$};
+		\node (S) at (4.5,5) {$S$};
+
+		% Lines going down
+		\draw[-] (B1) to (B2);
+		\draw[-] (S) to (B1);
+
+
+		% Lines going to terminals
+		\draw[-] (B2) to[bend right] (x1);
+		\draw[-] (B2) to[bend left] (x2);
+		\draw[-] (x1) to (x2);
+
+		\draw[-] (B1) to[bend right] (v1);
+		\draw[-] (B2) to[bend right] (v2);
+		\draw[-] (v1) to (v2);
+
+		\draw[-] (B1) to[bend left] (y2);
+		\draw[-] (B2) to[bend left] (y1);
+		\draw[-] (y1) to (y2);
+
+		\draw[-] (B1) to[bend right] (u2);
+		\draw[-] (S) to[bend right] (u1);
+		\draw[-] (u1) to (u2);
+
+		\draw[-] (B1) to[bend left] (z1);
+		\draw[-] (S) to[bend left] (z2);
+		\draw[-] (z1) to (z2);
+
+	\end{tikzpicture}
+	\caption{\label{fig:pumpelemmacfg} Gentagelse i parsetræ for CFG}
+\end{figure}
 
 
 
