Ændringer af font + geometri

--- a/DM553/Tidskompleksitet.tex
+++ b/DM553/Tidskompleksitet.tex
@@ -134,7 +134,7 @@ En måde hvorpå vi så kan gøre dette uden at bruge brute-force er \textit{bre
 Vi vil nu kigge på eksemplet af relative primtal. To tal er relative primtal hvis $1$ er det største heltal som ligeligt deler dem begge. For eksempel er $10$ og $21$ relative primtal, selvom ingen af dem er primtal. Dog er $10$ og $22$ ikke relative primtal, da begge er delelige med $2$. Lad $RELPRIME$ være problemet om at teste hvorledes to tal er relative primtal.
 
 \begin{equation*}
-	RELTPRIMTE = \{\text{\texttt{<x><y>}} \mid x \text{ og } y \text{ er relative primtal}\}
+	RELPRIME = \{\text{\texttt{<x><y>}} \mid x \text{ og } y \text{ er relative primtal}\}
 \end{equation*}
 
 \begin{theorem}
