--- a/DM553/preamble.tex
+++ b/DM553/preamble.tex
@@ -1,9 +1,16 @@
 % !TEX TS-program = xelatex
 % !TEX encoding = UTF-8 Unicode
-\documentclass[oneside, a4paper]{book}
+\documentclass[12pt, oneside, a4paper]{book}
+
+\usepackage[top=3cm, bottom=3cm, left=3cm, left=3cm, right=3cm, headsep=10pt,a4paper]{geometry}
+
+
+\usepackage{sourcesanspro}
+\usepackage{tgpagella}
 
 \usepackage[utf8]{inputenc} % Tillader utf-8 kodning
 \usepackage[T1]{fontenc} % Kodning der fungerer bedre til europæiske sprog
+\usepackage{microtype}
 
 \usepackage{float} % Tillader [H]
 
@@ -28,10 +35,6 @@
 
 \usepackage{xcolor}
 \usepackage{amsmath, amsfonts, mathtools, amsthm, amssymb}
-
-
-% Font
-\usepackage{newpxtext,newpxmath}  % Palatino
 
 
 \usepackage{tikz} % Til grafer
