--- a/HowToProveIt/Introduktion.tex
+++ b/HowToProveIt/Introduktion.tex
@@ -1,4 +1,4 @@
-\chapter{Indtroduktion}
+\chapter{Introduktion}
 
 \textit{Deductive Reasoning} (deduktion på dansk) er måden hvorpå vi finder svar i matematik, for eksempel ved at finde $x$ i en ligning. Deduktion bruges også i \textit{beviser}, som er hvad vi kigger på i den her bog.
 
