--- a/HowToProveIt/SætningsLogik.tex
+++ b/HowToProveIt/SætningsLogik.tex
@@ -50,7 +50,7 @@ Faktisk kan vi gøre det endnu mere symbol-rigt, ved at bruge symboler til ``ell
 \begin{tabular}{ll}
 \textit{Symbol} & \textit{Betydning} \\ \hline
 $\lor$          & eller (disjunktion)              \\
-$\land          & og (konjunktion)                 \\
+$\land$          & og (konjunktion)                 \\
 $\neg$          & ikke (negation)
 \end{tabular}
 \end{table}
