--- a/preamble.tex
+++ b/preamble.tex
@@ -237,6 +237,7 @@
 \declaretheorem[style=thmredbox, name=Lemma, numberlike=mycounter]{lemma}
 \declaretheorem[style=thmredbox, name=Proposition, numberlike=mycounter]{proposition}
 \declaretheorem[style=thmredbox, name=Corollary, numberlike=mycounter]{corollary}
+\declaretheorem[style=thmredbox, name=Formodning, numberlike=mycounter]{conjecture}
 \declaretheorem[style=thmbluebox, name=Påstand, numberlike=mycounter]{claim}
 \declaretheorem[style=thmbluebox, name=Eksempel, numberlike=mycounter]{example}
 
@@ -258,7 +259,7 @@
         topline=false,
         bottomline=false,
         linecolor=CoralRed,
-        backgroundcolor=CoralRed!5
+        backgroundcolor=CoralRed!1
     },
     qed=\qedsymbol,
     spacebelow=\parsep,
